chore: fixes for create funnels