@@ -13,6 +13,7 @@ import java.time.Instant;
 import java.time.LocalDateTime;
 import java.time.ZoneOffset;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 import lombok.RequiredArgsConstructor;
@@ -33,7 +34,7 @@ public class FunnelDefinitionDao {
       .preparedQuery(FunnelDefinitionQueries.INSERT)
       .rxExecute(
         Tuple.from(
-          List.of(
+          Arrays.asList(
             row.getProjectId(),
             row.getName(),
             row.getDescription(),
@@ -57,7 +58,7 @@ public class FunnelDefinitionDao {
       .preparedQuery(FunnelDefinitionQueries.UPDATE)
       .rxExecute(
         Tuple.from(
-          List.of(
+          Arrays.asList(
             row.getName(),
             row.getDescription(),
             row.getFunnelType(),
